--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(20px + 2vmin);
   color: white;
 }
 
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+.board {
+  display: inline-block;
+  border: 2px solid #333;
+}
+
+.board-row:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.square {
+  float: left;
+  width: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  line-height: 34px;
+  text-align: center;
+  border: 1px solid #0a0909;
+  cursor: pointer;
+  background-color: #fff;
+  font-size: 20px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.status {
+  margin-bottom: 1px;
+}
+
